--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-*.class
+# Ignore all dotfiles...
+.*
+# except for .gitignore
+!.gitignore
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Ignore Play! working directory #
+db
+eclipse
+lib/
+log
+logs
+modules/
+out/
+precompiled
+tmp
+test-result
+eclipse
+server.pid
+*.iml
+*.ipr
+*.iws
